# LumiWallet

./: .gitignore  README.md  package.json
agent/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
agent/service/: config.py  handlers.py  llm.py  main.py  models.py  prompts.py  requirements.txt
agent/service/agents/: BaseRiskAgent.py  ContractAgent.py  PhishingAgent.py  SlippageAgent.py  __init__.py  agent.py
agent/tests/: integration_api_test.py  integration_api_test_v2.py  test_risk_service.py
contracts/: README.md
contracts/dex/: eGold.sol  eGoldAMM.sol  eGoldFaucet.sol
dapp/: README.md  package-lock.json  package.json
dapp/src/: App.css  App.tsx  index.css
dapp/src/components/: ApproveRequestCard.tsx  WalletConnect.tsx
dapp/src/hooks/: useWallet.ts
dapp/src/lib/: dialogBus.ts  erc20Approve.ts
extension/: .env.example  README.md  approval.html  index.html  package-lock.json  package.json  vite.config.ts
extension/.githooks/: pre-commit
extension/public/: manifest.json
extension/src/: App.tsx  main.tsx
extension/src/approval/: main.tsx
extension/src/assets/: tokenIcons.ts
extension/src/background/: index.ts
extension/src/components/: BalanceCard.tsx  HashText.tsx  Layout.tsx  QuickActions.tsx  RiskPanel.tsx  TokenIcon.tsx  TxHistoryList.tsx
extension/src/config/: networks.ts
extension/src/content/: inpage.ts  provider.ts
extension/src/pages/: ActivityPage.tsx  HomePage.tsx  LoginPage.tsx  SendPage.tsx  SwapPage.tsx  (+1 more)
shared/constants/: contracts.ts
shared/types/: index.ts  networks.ts  wallet.ts
(+10 files in other folders)
