[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.9.2",
    "langchain==0.2.16",
    "langchain-openai==0.1.23",
    "python-dotenv==1.0.1",
    "socksio>=1.0.0",
]
